Adjustments to JDK 17